# short-video-studio-voxcpm

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start_macos_linux.sh  start_windows.bat  start_windows.ps1
voxcpm_studio/: __init__.py  cli.py  config.py  engine.py  modelscope_downloader.py  server.py
